image alignment fixed and version bumped

--- a/scss/underscores/navigation/_links.scss
+++ b/scss/underscores/navigation/_links.scss
@@ -24,9 +24,9 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .navigation a, .main-navigation a {
 .main-navigation a{
 	text-align: left !important;
 }
-.loose_script_entry_content_h6 h6{
-	margin-top: 6%;
-}
+// .loose_script_entry_content_h6 h6{
+// 	margin-top: 6%;
+// }
 .edit-link {
     margin-left: 2em;
     font-weight: 700;
